--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Download package artifact
       uses: actions/download-artifact@v2
       with:
-        name: Project-deploy
+        name: wonderland-test
         path: deploy
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.1
