--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,12 +5,12 @@ permissions:
 
 jobs:
   package:
-    runs-on: windows-latest
+    runs-on: ubuntu-22.04
     container:
       image: wonderlandengine/editor:latest
     steps:
     - uses: actions/checkout@v2
-    - name: Package
+    - name: package
       run: /usr/local/bin/entrypoint.sh WonderlandEditor --windowless --package --project MyWonderland.wlp --credentials "$WLE_CREDENTIALS"
       env:
           WLE_CREDENTIALS: ${{ secrets.WLE_CREDENTIALS }}
@@ -23,7 +23,7 @@ jobs:
         path: deploy/
   deploy:
     needs: package
-    runs-on: windows-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: Download package artifact
