--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,7 +16,7 @@ jobs:
       env:
           WLE_CREDENTIALS: ${{ secrets.WLE_CREDENTIALS }}
     - name: Gzip
-      run: gzip -k deploy/*
+      run: gzip -d deploy/*
     - name: Upload package artifact
       uses: actions/upload-artifact@v2
       with:
